# django-saga-orchestrator-example

./: .pre-commit-config.yaml  README.md  compose.yaml  start.sh
docs/: saga-orchestration.excalidraw
order/: LICENSE  compose.yaml  pyproject.toml  requirements.txt
order/src/: settings.py
order/src/core/: admin.py  models.py  orchestrator.py  serializers.py  views.py
order/src/core/migrations/: 0001_initial.py
scripts/: services.sh  start.sh  stop.sh
services/order/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
services/order/src/: asgi.py  settings.py  urls.py  wsgi.py
services/order/src/core/: admin.py  apps.py  consumer.py  interfaces.py  models.py  orchestrator.py  serializers.py  urls.py  views.py
services/order/src/core/fixtures/: order.json
services/order/src/core/migrations/: 0001_initial.py  0002_transaction.py
services/order/src/core/models/: __init__.py  transactions.py
services/order/tests/integrations/: test_order_view_set.py
services/order/tests/unit/: test_consumer.py  test_orchestrator.py
services/payment/: .env.example  compose.yaml  gunicorn.conf.py  pyproject.toml
services/stock/: .dockerignore  .env.example  compose.yaml  gunicorn.conf.py  manage.py
services/stock/src/: settings.py  urls.py
stock/: compose.yaml
stock/src/core/: admin.py  models.py  serializers.py
stock/tests/unit/: test_orchestrator.py
web/: README.md  package-lock.json  package.json  server.js
web/src/app/: layout.js  page.css  page.js
(+17 files in other folders)
